Fix navigation and overflow of CodeMirror (#6)

--- a/assets/css/bundle.scss
+++ b/assets/css/bundle.scss
@@ -11,3 +11,8 @@
 }
 
 @import "codemirror";
+
+.CodeMirror {
+    position: relative;
+    z-index: -1;
+}
